minikube-configs/k8s/auth-service-egress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service-egress-ingress-policy
  namespace: application
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: auth-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: data-service
          app.kubernetes.io/name: data-service
    ports:
    - protocol: TCP
      port: 80  # Port auth-service listens on
  egress:
  # Allow access only to data-service
  - to:
    - podSelector:
        matchLabels:
          app.kubernetes.io/instance: data-service
          app.kubernetes.io/name: data-service
    ports:
    - protocol: TCP
      port: 80
